--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "gatsby": "^1.9.153",
     "gatsby-link": "^1.6.34",
+    "gatsby-plugin-favicon": "^3.1.4",
     "gatsby-plugin-google-analytics": "1.0.15",
     "gatsby-plugin-manifest": "1.0.12",
     "gatsby-plugin-offline": "1.0.12",
